--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "express": "^4.18.1",
     "express-handlebars": "3.0",
     "mysql2": "^2.3.3",
-    "pug": "^3.0.2"
+    "pug": "^3.0.2",
+    "sequelize": "^6.21.4"
   },
   "devDependencies": {
     "nodemon": "^2.0.19"
